--- a/android/build.gradle
+++ b/android/build.gradle
@@ -115,7 +115,7 @@ afterEvaluate { project ->
     }
 
     task androidJavadocJar(type: Jar, dependsOn: androidJavadoc) {
-        classifier = 'javadoc'
+        // classifier = 'javadoc'
         from androidJavadoc.destinationDir
     }
 
